--- a/cv/resume.tex
+++ b/cv/resume.tex
@@ -210,7 +210,7 @@
 \def\vs{\vspace{-0.1in}}
 \begin{document}
 % \makeheading{Curriculum Vitae\\ [0.3cm] TIEP HUU VU\quad~~~~~~\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad{\small Last update: December 17, 2015}}
-\makeheading{Quan Meng \hfill {\small Last update: \today}}
+\makeheading{Quan Meng 孟权 \hfill {\small Last update: \today}}
 
 
 \section{Contact Information}
@@ -248,7 +248,7 @@
 	GNeRF: GAN-Based Neural Radiance Field without Posed Camera \\
 	\textit{Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV), 2021} \\
 	{\bf Oral Presentation: 3.4\%} \\
-	We introduce GNeRF, a method that can estimate camera poses and neural radiance fields jointly when the cameras are initialized at random poses in complex scenarios (outside-in scenes, even with less texture or intense noise ). We achieve this by marrying Generative Adversarial Networks (GAN) with Neural Radiance Field.
+	We introduce GNeRF, a method that can estimate neural radiance fields and camera poses jointly when the cameras are initialized at random poses in complex scenarios (outside-in scenes, even with less texture or intense noise). We achieve this by marrying Generative Adversarial Networks (GAN) with Neural Radiance Field.
 	
 	\item {\bf Quan Meng}, Jiakai Zhang, Qiang Hu, Xuming He, and Jingyi Yu \\
 	LGNN: A Context-Aware Line Segment Detector \\
@@ -261,9 +261,11 @@
 \section{Honors and Awards}
 \vspace{-0.25in}
 \begin{outerlist}
-\item First prices in \href{http://www.worldrobotconference.com/en/}{World Robot Contest Fighting Robot Competition}. \hfill 2017
-\item First prices (Shan Dong) in \href{https://www.nuedc-training.com.cn/}{National Undergraduate Electronics Design Contest} \hfill 2017, 2018
-\item National Scholarship Award	 \hfill 2021
+\item First prize in \href{http://www.worldrobotconference.com/en/}{World Robot Contest Fighting Robot Competition}. \hfill 2017
+\item First prize in \href{https://www.nuedc-training.com.cn/}{National Undergraduate Electronics Design Contest (Shandong, China)} \hfill 2017
+\item First prize in \href{https://www.nuedc-training.com.cn/}{National Undergraduate Electronics Design Contest (Shandong, China)} \hfill 2018
+\item Second prize in \href{http://edu.shandong.gov.cn/col/col12041/index.html}{The 4th Shandong College Students' Science and Innovation Contest} \hfill 2018
+\item National Scholarship Award, ShanghaiTech University	 \hfill 2021
 
 \end{outerlist}
 
@@ -272,9 +274,9 @@
 \label{sec:technical_ski}
 \vspace{-0.25in}
 \begin{outerlist}
-	\item {\it Programming}: Linux, C/C++, Python, Java, Pytorch, Opencv, Latex, Matlab, Qt.
-	\item {\it Hardwares}: Circuit Design, ARM, STM32, STC, PCB. 
-	\item {\it Softwares}: Blender, Keil, Illustrator
+	\item Programming: Linux, Assembly Language (ARM), C/C++, Python, Java, Pytorch, Opencv, Latex, Matlab, Qt.
+	\item Hardwares: Circuit Design, ARM, STM32, STC, PCB. 
+	\item Softwares: Blender, Keil, Illustrator
 \end{outerlist}
 
 
@@ -283,9 +285,19 @@
 \label{sec:teaching_exp}
 \vspace{-0.25in}
 \begin{outerlist}
-	\item {\it CS280 Deep Learning} in ShanghaiTech University: Teaching Assistant
+	\item {\it CS280 Deep Learning} in ShanghaiTech University: Teaching Assistant \hfill Fall 2020
 \end{outerlist}
 
+%% ========= References ==============================
+\section{References}
+\label{sec:technical_ski}
+\vspace{-0.25in}
+\begin{outerlist}
+	\item \textbf{Prof. Jingyi Yu}, ShanghaiTech University, \href{mailto:yujingyi@shanghaitech.edu.cn}{yujingyi@shanghaitech.edu.cn}
+	\item \textbf{Prof. Hao Su}, UC San Diego, \href{mailto:haosu@eng.ucsd.edu}{haosu@eng.ucsd.edu}
+	\item \textbf{Prof. Xuming He}, ShanghaiTech University, \href{mailto:hexm@shanghaitech.edu.cn}{hexm@shanghaitech.edu.cn}
+	\item \textbf{Prof. Lan Xu}, ShanghaiTech University, \href{mailto:xulan1@shanghaitech.edu.cn}{xulan1@shanghaitech.edu.cn}
+\end{outerlist}
 
 %% ==============================================================
 %\vspace{0.2in}
